# comrademajor

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js  webpack.prod-wo-wasm.js  webpack.prod.js
cargo/: Cargo.toml
cargo/src/: file.rs  lib.rs  processor.rs
cargo/src/highlight/: extract.rs  finder.rs  highlighter.rs  kind.rs  location.rs  mod.rs  regexes.rs
cargo/src/highlight/types/: gov.rs  mod.rs  swear.rs
cargo/src/js_array/: binded.rs  mod.rs
cargo/src/parse/: comments.rs  header.rs  kludges.rs  messages.rs  mod.rs  parser.rs  wall.rs
cargo/src/types/: array.rs  comment.rs  kludge.rs  message.rs  mod.rs  post.rs
js/: App.tsx  Processor.ts  Scanner.ts  index.ts  slice.ts  store.ts  worker.ts
js/components/: CircularProgressWithLabel.tsx  Comment.tsx  Message.tsx  Post.tsx  Processor.tsx  Results.tsx  Search.tsx  Stats.tsx
js/components/items/: Comment.tsx  HighlightedText.tsx  Message.tsx  Post.tsx
js/types/: Comment.ts  File.ts  Item.ts  Location.ts  Message.ts  Post.ts
js/types/items/: Comment.ts  Item.ts  Message.ts  Post.ts
pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
pkg/snippets/js/: Processor.ts
src/: file.rs  lib.rs  processor.rs
src/highlight/: extract.rs  location.rs  mod.rs  swear.rs
src/js_array/: binded.rs  mod.rs  typed.rs
src/parse/: comments.rs  messages.rs
src/types/: array.rs  comment.rs  js_array.rs  location.rs  message.rs  mod.rs
static/: index.html
