[package]
name = "comrade-major"
version = "0.1.0"
authors = ["Alexey Shekhirin <a.shekhirin@gmail.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ["ReadableStream", "console"] }
encoding_rs = "0.8.26"
wasm-bindgen-futures = "0.4.18"
marked = "0.2.0"
regex = "1.4.2"
lazy_static = "1.4.0"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
